tests/compile-fail/derive_enum_no_location.stderr
error: StackError requires a 'location' field of type Location
 --> tests/compile-fail/derive_enum_no_location.rs:7:14
  |
7 |     Variant1 { message: String },
  |              ^^^^^^^^^^^^^^^^^^^
